--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha --exit index.spec.js"
+    "test": "mocha --exit index.spec.js",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "",
   "license": "ISC",
